# my_site

./: .gitignore  Pipfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
accounts/: views.py
blog/: forms.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20240515_1511.py  0002_post_date.py  0003_like.py  0003_post_slug.py  0004_alter_post_slug.py
config/: settings.py  urls.py
read/: admin.py  models.py  urls.py  views.py
read/migrations/: 0001_initial.py  0002_auto_20240510_1343.py
read/templatetags/: read_tags.py
run/: admin.py  models.py  urls.py  views.py
run/migrations/: 0001_initial.py  0002_alter_month_year.py  0002_delete_month.py  0003_auto_20230605_1524.py
run/templatetags/: run_tags.py
static/css/: base.css
staticfiles/: staticfiles.json
staticfiles/css/: base.02a98fdc5a7c.css  base.03ce40dbb6bf.css  base.044b799f66aa.css  base.068ad5a779e2.css  base.07c62fe408d3.css  base.08dffafa0393.css  base.0ef8cb4ae562.css  base.141fdfe97582.css  base.16f0a54bf396.css  base.18243495143f.css  base.18f3124bab91.css  base.1a40cda95e74.css  base.2222065e3f82.css  base.22b3feb3a89c.css  base.2311edddbe1b.css  base.24cd69dfabe3.css  base.26958a551098.css  base.2ae0938a6968.css  base.2e87f52301b7.css  base.2e9b825e6905.css  base.396ac09c3951.css  base.3b5a50134db2.css  base.488fae4665f0.css  base.4cf8c405d899.css  base.4e19de4ee55e.css  base.522f2ee2bac7.css  (+73 more)
system/: forms.py  views.py
templates/: base.html
todo_app/: admin.py  forms.py  models.py  urls.py  views.py
(+46 files in other folders)
