[tool.poetry]
name = "my-site"
version = "0.1.0"
description = "My site on Django"
authors = ["deriabin_85 <deriabin_85@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "==3.7.2"
crispy-bootstrap4 = "==2022.1"
dj-database-url = "==2.0.0"
dj-email-url = "==1.0.6"
django = "==3.2.9"
django-cache-url = "==3.4.4"
django-crispy-forms = "==2.0"
django-debug-toolbar = "==4.1.0"
django-ranged-response = "==0.2.0"
django-simple-captcha = "==0.5.17"
environs = "==9.5.0"
gunicorn = "==20.1.0"
marshmallow = "==3.19.0"
packaging = "==23.1"
pillow = "==9.5.0"
python-dotenv = "==1.0.0"
pytz = "==2023.3"
sqlparse = "==0.4.4"
typing-extensions = "==4.6.3"
whitenoise = "==6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
